fixing form invisibility bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,7 +33,7 @@ font-family: Arial, Helvetica, sans-serif;
   padding-right: 15px;
 }
 
-.form-control {
+.form-control-search {
   box-shadow: none;
   background-color: rgba(0,0,0,0);
   border-color: rgba(0,0,0,0);
